[package]
name = "interactive-voronoi"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
keywords = []

[[bin]]
name = "interactive-voronoi"
path = "src/main.rs"

[dependencies]
piston = "0.35.0"
piston2d-opengl_graphics = "0.50.0"
piston2d-graphics = "0.24.0"
piston2d-touch_visualizer = "0.8.0"
voronoi = "0.1.4"
rand = "0.3"
getopts = "0.2.15"

[dependencies.pistoncore-sdl2_window]
version = "0.47.0"
optional = true

[features]
default = ["include_sdl2"]
include_sdl2 = ["pistoncore-sdl2_window"]
