[package]
name = "interactive-voronoi"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
keywords = []

[[bin]]
name = "interactive-voronoi"
path = "src/main.rs"

[dependencies]
piston = "0.53"
piston2d-opengl_graphics = "0.82"
piston2d-graphics = "0.43"
piston2d-touch_visualizer = "0.33"
pistoncore-sdl2_window = { version = "0.68" }
voronoi = "0.1"
rand = "0.8"
getopts = "0.2"
